<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"
            android:background="@color/blue">
            <TextView
               android:id="@+id/dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:layout_marginTop="50dp"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_doctor_code"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_below="@+id/dashboard"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="Logout"
                android:src="@drawable/ic_baseline_power_settings_new_24"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_baseline_info_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ask_questions"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_baseline_person_24"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/see_your_doctor"
                        android:layout_margin="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_highlight_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Acquire Advice"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="152dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_phone_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="Request an Appointment"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>